README.mdを削除し、部屋割表ページにパスワード認証機能を追加。ナビゲーションロゴを2025年に更新し、Googleマップリンクを修正。スタイルを改善し、スクリプトを最適化。

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- 固定ナビゲーション -->
     <nav class="navbar">
       <div class="nav-container">
-        <div class="nav-logo">研修旅行1941</div>
+        <div class="nav-logo">研修旅行2025</div>
 
         <!-- ハンバーガー追加 -->
         <div class="hamburger" id="hamburger">☰</div>
@@ -484,7 +484,8 @@
           <p>東京都台東区浅草2-3-1 | ☎ 03-3842-0181</p>
         </a>
 
-        <a href="https://www.google.com/maps" target="_blank" class="link-card">
+        <a href="https://www.google.com/maps/d/u/0/viewer?ll=35.71388080040258%2C139.7964262&z=17&mid=1Fy58V9cRhhCivzCE3ubOF2m8tDfKusc" target="_blank" class="link-card">
+          <iframe src="https://www.google.com/maps/d/embed?mid=1Fy58V9cRhhCivzCE3ubOF2m8tDfKusc&ehbc=2E312F" width="640" height="480"></iframe>
           <h4>Google Maps</h4>
         </a>
       </section>
@@ -496,7 +497,7 @@
           <table class="data-table">
             <p>
               部屋割表はこちら！（パスワードが必要です）
-              <a href="room.html">room.htmlへ移動</a>
+              <a href="frontdoor.html">room.htmlへ移動</a>
             </p>
           </table>
         </section>
