--- a/room.html
+++ b/room.html
@@ -1,50 +1,163 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>部屋割表</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>部屋割表 - 研修旅行 2025</title>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;500;700&display=swap" rel="stylesheet" />
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-  <body>
-    <section id="room-auth" class="section fade-in">
-      <h2 class="section-title">🔐 部屋割表の確認</h2>
-      <p class="description">
-        こちらのページでは、研修旅行の<strong>部屋割表</strong>を確認できます。<br />
-        閲覧にはパスワードが必要です。
-      </p>
+    :root {
+      --primary: #4a90e2;
+      --primary-dark: #357abd;
+      --secondary: #5dade2;
+      --success: #2ecc71;
+      --bg-light: #ebf5fb;
+    }
 
-      <div
-        class="card"
-        style="max-width: 380px; margin: 20px auto; padding: 25px"
-      >
-        <input
-          type="password"
-          id="passwordInput"
-          placeholder="パスワードを入力"
-          required
-        />
-        <button
-          onclick="checkPassword()"
-          class="btn-primary"
-          style="margin-top: 15px"
-        >
-          表示する
-        </button>
-      </div>
+    body {
+      background: linear-gradient(180deg, #87ceeb 0%, #b0e0e6 50%, #e0f6ff 100%);
+      font-family: "Noto Serif JP", serif;
+      min-height: 100vh;
+      padding: 20px;
+      padding-top: 60px;
+    }
 
-      <p style="text-align: center; margin-top: 20px">
-        ← <a href="index.html">トップへ戻る</a>
-      </p>
-    </section>
+    .container {
+      max-width: 900px;
+      width: 100%;
+      margin: 0 auto;
+    }
 
-    <!-- 部屋割表（最初は非表示） -->
-    <section
-      id="room-table"
-      class="section fade-in"
-      style="display: none; margin-top: 40px"
-    >
+    .section {
+      opacity: 0;
+      transform: translateY(40px);
+      animation: fadeIn 0.8s ease forwards;
+    }
+
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .section-title {
+      font-size: 2.5rem;
+      color: #1a5490;
+      margin-bottom: 1.5em;
+      text-align: center;
+      font-weight: 700;
+      text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.8);
+      letter-spacing: 0.1em;
+    }
+
+    .card {
+      background: white;
+      padding: 2.5em;
+      border-radius: 16px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+      margin-bottom: 2em;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
+    }
+
+    /* テーブル */
+    .data-table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    .data-table th,
+    .data-table td {
+      padding: 1em;
+      text-align: left;
+      border-bottom: 1px solid #e0e0e0;
+    }
+
+    .data-table th {
+      background: var(--primary);
+      color: white;
+      font-weight: 600;
+      font-size: 1.1rem;
+    }
+
+    .data-table td:first-child {
+      font-weight: 700;
+      color: var(--primary);
+      font-size: 1.1rem;
+      width: 100px;
+      text-align: center;
+    }
+
+    .data-table tr:hover {
+      background: var(--bg-light);
+    }
+
+    .back-link {
+      text-align: center;
+      margin-top: 2em;
+      font-size: 1.1rem;
+    }
+
+    .back-link a {
+      color: var(--primary);
+      text-decoration: none;
+      font-weight: 600;
+      transition: opacity 0.3s ease;
+      display: inline-block;
+      padding: 0.8em 2em;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    }
+
+    .back-link a:hover {
+      opacity: 0.8;
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+    }
+
+    /* レスポンシブ */
+    @media (max-width: 768px) {
+      body {
+        padding-top: 40px;
+      }
+
+      .section-title {
+        font-size: 1.8rem;
+      }
+
+      .card {
+        padding: 1.5em;
+      }
+
+      .data-table th,
+      .data-table td {
+        padding: 0.7em 0.5em;
+        font-size: 0.85rem;
+      }
+
+      .data-table td:first-child {
+        width: 50px;
+        font-size: 0.95rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <!-- 部屋割表 -->
+    <section class="section">
       <h2 class="section-title">🚪 部屋割表</h2>
       <div class="card">
         <table class="data-table">
@@ -86,8 +199,11 @@
           </tr>
         </table>
       </div>
-    </section>
 
-    <script src="script.js"></script>
-  </body>
+      <div class="back-link">
+        <a href="index.html">← トップへ戻る</a>
+      </div>
+    </section>
+  </div>
+</body>
 </html>
