訪問先リンク集に新しいリンクを追加し、パスワード認証機能をAPIを使用して実装。README.mdを削除。

--- a/index.html
+++ b/index.html
@@ -462,6 +462,29 @@
       <!-- 訪問先リンク集 -->
       <section id="links" class="section fade-in">
         <h2 class="section-title">訪問先リンク集</h2>
+        <a
+          href="https://www.airport-restaurant.com/restaurant-shop/saiho/"
+          target="_blank"
+          class="link-card">
+          <h4>中華料理 彩鳳</h4>
+          <p>羽田空港第1ターミナル 3F マーケットプレイス | ☎ 03-5757-8839</p>
+        </a>
+        
+        <a
+          href="https://www.psc-inc.co.jp/"
+          target="_blank"
+          class="link-card">
+          <h4>株式会社ピーエスシー</h4>
+          <p>東京都港区芝浦2-4-1 世界貿易センタービル南館25階 | ☎ 03-3435-1044</p>
+        </a>
+
+        <a
+          href="https://www.psc-inc.co.jp/"
+          target="_blank"
+          class="link-card">
+          <h4>日本科学未来館</h4>
+          <p>東京都江東区青海2丁目3-6 | ☎ 03-3570-9151</p>
+        </a>
 
         <a
           href="https://www.tokyodisneyresort.jp/tdl/"
@@ -471,22 +494,16 @@
           <p>千葉県浦安市舞浜1-1 | ☎ 045-330-5211</p>
         </a>
 
-        <a
-          href="https://www.tokyo-skytree.jp/"
-          target="_blank"
-          class="link-card">
-          <h4>東京スカイツリー</h4>
-          <p>東京都墨田区押上1-1-2 | ☎ 0570-55-0634</p>
-        </a>
-
         <a href="https://www.senso-ji.jp/" target="_blank" class="link-card">
           <h4>浅草寺</h4>
           <p>東京都台東区浅草2-3-1 | ☎ 03-3842-0181</p>
         </a>
 
-        <a href="https://www.google.com/maps/d/u/0/viewer?ll=35.71388080040258%2C139.7964262&z=17&mid=1Fy58V9cRhhCivzCE3ubOF2m8tDfKusc" target="_blank" class="link-card">
-          <iframe src="https://www.google.com/maps/d/embed?mid=1Fy58V9cRhhCivzCE3ubOF2m8tDfKusc&ehbc=2E312F" width="640" height="480"></iframe>
-          <h4>Google Maps</h4>
+        <a
+          href="https://www.google.com/maps/d/u/0/viewer?ll=35.71388080040258%2C139.7964262&z=17&mid=1Fy58V9cRhhCivzCE3ubOF2m8tDfKusc"
+          target="_blank" class="link-card">
+          <h4>Google Mapsで開く
+          </h4>
         </a>
       </section>
 
