SNS投稿利用マニュアルのHTML構造を追加し、投稿ルールや操作マニュアルを詳細化。ナビゲーションメニューを整備し、付録にアカウント情報を追加。

--- a/sns_manual.html
+++ b/sns_manual.html
@@ -1,11 +1,227 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SNS投稿マニュアル - bica 研修旅行 2025</title>
-    <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-    <section
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SNS投稿利用マニュアル - 研修旅行2025</title>
+        <link rel="stylesheet" href="style.css">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;500;700&display=swap"
+            rel="stylesheet" />
+    </head>
+
+    <body>
+
+        <!-- ナビゲーション -->
+        <nav class="navbar">
+            <div class="nav-container">
+                <div class="nav-logo">研修旅行2025</div>
+                <div class="hamburger" id="hamburger">☰</div>
+
+                <ul class="nav-menu" id="navMenu">
+                    <li><a href="index.html#schedule">行程表</a></li>
+                    <li><a href="index.html#checklist">持ち物</a></li>
+                    <li><a href="index.html#notes">注意事項</a></li>
+                    <li><a href="index.html#hotel">宿泊先</a></li>
+                    <li><a href="index.html#links">リンク</a></li>
+                    <li><a href="index.html#sns">SNS</a></li>
+                    <li><a href="index.html#rooms">部屋割</a></li>
+                    <li><a href="index.html#survey">アンケート</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="container">
+
+            <!-- ヘッダ -->
+            <section class="hero fade-in">
+                <h1>SNS投稿 利用マニュアル</h1>
+                <p>研修旅行2025 SNS運用ガイドライン</p>
+            </section>
+
+            <!-- 目的 -->
+            <section class="section fade-in">
+                <h2 class="section-title">目的</h2>
+                <div class="card">
+                    <p>研修中の活動を記録し、参加者・教員間で円滑に共有することを目的とする。</p>
+                </div>
+            </section>
+
+            <!-- 投稿ルール -->
+            <section class="section fade-in">
+                <h2 class="section-title">投稿ルール</h2>
+
+                <div class="accordion">
+                    <button class="accordion-button">
+                        <span>投稿タイミング</span><span
+                            class="accordion-arrow">▼</span>
+                    </button>
+                    <div class="accordion-content">
+                        <ul class="checklist">
+                            <li
+                                class="checklist-item">移動中や混雑時など投稿が困難な場合は時差投稿を許容する。</li>
+                            <li
+                                class="checklist-item">当番時間がホテル内の場合、その日の振り返り投稿でも可。</li>
+                            <li
+                                class="checklist-item">担当時間を忘れている学生には周囲またはSNS班が声かけを行う。</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="accordion">
+                    <button class="accordion-button">
+                        <span>写真・内容の選び方</span><span
+                            class="accordion-arrow">▼</span>
+                    </button>
+                    <div class="accordion-content">
+                        <ul class="checklist">
+                            <li
+                                class="checklist-item">同じグループで投稿が重ならないよう写真は調整する。</li>
+                            <li class="checklist-item">公序良俗に反する投稿は禁止。</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- タグ -->
+                <div class="accordion">
+                    <button class="accordion-button">
+                        <span>タグ付け</span><span class="accordion-arrow">▼</span>
+                    </button>
+                    <div class="accordion-content">
+                        <ul class="checklist">
+                            <li
+                                class="checklist-item">必須タグ：<strong>#bica2025
+                                    #（チーム名）</strong></li>
+                            <li class="checklist-item">自由投稿でも
+                                <strong>#bica2025</strong> を必ずつける。</li>
+                            <li class="checklist-item">ルール内であれば追加タグは自由。</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- 安全面 -->
+                <div class="accordion">
+                    <button class="accordion-button">
+                        <span>安全面</span><span class="accordion-arrow">▼</span>
+                    </button>
+                    <div class="accordion-content">
+                        <ul class="checklist">
+
+                            <li class="checklist-item">徒歩移動中は投稿禁止（歩きスマホ禁止）。</li>
+                            <li
+                                class="checklist-item">体調不良で投稿できない場合はSNS運用班へ連絡。</li>
+                        </ul>
+                    </div>
+                </section>
+
+                <!-- 個人情報・マナー -->
+                <section class="section fade-in">
+                    <h2 class="section-title">個人情報・マナー</h2>
+
+                    <div class="accordion">
+                        <button class="accordion-button">
+                            <span>投稿に関する配慮</span><span
+                                class="accordion-arrow">▼</span>
+                        </button>
+                        <div class="accordion-content">
+                            <ul class="checklist">
+                                <li
+                                    class="checklist-item">ホテルの部屋番号や住所など特定情報の投稿は避ける。</li>
+                                <li class="checklist-item">顔出しは本人許可がある場合のみ。</li>
+                                <li
+                                    class="checklist-item">他者が映る場合は写さない・加工で隠すなどの配慮を行う。</li>
+                                <li
+                                    class="checklist-item">非公開予定でも不適切な投稿は禁止。</li>
+                                <li
+                                    class="checklist-item">学校の名前を背負っていることを自覚し、節度ある行動をする。</li>
+                                    <li
+                                    class="checklist-item">投稿の有無関わらず常識的なマナーと安全に配慮する。</li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- トラブル -->
+                <section class="section fade-in">
+                    <h2 class="section-title">トラブル対応</h2>
+                    <div class="card">
+                        <ul class="checklist">
+                            <li
+                                class="checklist-item">投稿できない・ログインできない場合はSNS運用班へ連絡。</li>
+                            <li class="checklist-item">体調不良時も速やかに連絡する。</li>
+                        </ul>
+                    </div>
+                </section>
+
+                <!-- Instagram操作 -->
+                <section class="section fade-in">
+                    <h2 class="section-title">Instagram 操作マニュアル</h2>
+
+                    <div class="accordion">
+                        <button class="accordion-button">
+                            <span>ログイン方法（アプリ）</span><span
+                                class="accordion-arrow">▼</span>
+                        </button>
+                        <div class="accordion-content">
+                            <ol>
+                                <li>ホーム画面右下のアイコンを長押し。</li>
+                                <li>「Instagramアカウントを追加」→「既存のアカウントにログイン」。</li>
+                                <li>ユーザーネームとパスワードを入力。</li>
+                            </ol>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <button class="accordion-button">
+                            <span>ログイン方法（ブラウザ）</span><span
+                                class="accordion-arrow">▼</span>
+                        </button>
+                        <div class="accordion-content">
+                            <ol>
+                                <li>ブラウザで「Instagram」を検索。</li>
+                                <li>ログイン画面でユーザーネーム・パスワードを入力。</li>
+                            </ol>
+                        </div>
+                    </div>
+
+                    <div class="accordion">
+                        <button class="accordion-button">
+                            <span>投稿手順</span><span
+                                class="accordion-arrow">▼</span>
+                        </button>
+                        <div class="accordion-content">
+                            <ol>
+                                <li>研修記録アカウントにログイン。</li>
+                                <li>ホームまたはプロフィール左上の「＋」を押す。</li>
+                                <li>「投稿」を選択。</li>
+                                <li>写真を選ぶ。</li>
+                                <li>「次へ」→編集して「次へ」。</li>
+                                <li>キャプションに文章を入力（必須タグを含める）。</li>
+                                <li>必要に応じて音楽・位置情報を追加し「シェア」で投稿完了。</li>
+                            </ol>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- 付録 -->
+                <section class="section fade-in">
+                    <h2 class="section-title">付録：アカウント情報</h2>
+                    <div class="card">
+                        <p><strong>ユーザーネーム：</strong>bica_trip_2025</p>
+                        <p><strong>パスワード：</strong>cjdb3136</p>
+                        <p style="color: #c00; margin-top: 1em;">※
+                            配布する際はこの項目を削除してください。</p>
+                    </div>
+                </section>
+
+                <!-- 戻るリンク -->
+                <div class="section fade-in"
+                    style="text-align:center; margin-bottom: 4em;">
+                    <a href="index.html" class="submit-btn"><span
+                            class="btn-text">トップへ戻る</span></a>
+                </div>
+
+            </div>
+
+            <script src="script.js"></script>
+        </body>
+    </html>
