ヘッダのタイトルを改行を加えて修正

--- a/sns_manual.html
+++ b/sns_manual.html
@@ -35,7 +35,7 @@
 
             <!-- ヘッダ -->
             <section class="hero fade-in">
-                <h1>SNS投稿 利用マニュアル</h1>
+                <h1>SNS投稿<br>利用マニュアル</h1>
                 <p>研修旅行2025 SNS運用ガイドライン</p>
             </section>
 
