コード構造をリファクタリングし、可読性と保守性を向上させる

--- a/sns_manual.html
+++ b/sns_manual.html
@@ -212,7 +212,7 @@
                 </section>
 
                 <!-- 付録 -->
-                <section class="section fade-in">
+                <!--<section class="section fade-in">
                     <h2 class="section-title">付録：アカウント情報</h2>
                     <div class="card">
                         <div class="auth_data">
@@ -230,7 +230,7 @@
                         </button>
                     </div>
                 </div>
-            </section>
+            </section>-->
 
             <!-- 戻るリンク -->
             <div class="section fade-in"
