--- a/sns_manual.html
+++ b/sns_manual.html
@@ -13,20 +13,23 @@
     <body>
 
         <!-- ナビゲーション -->
+        <!-- 固定ナビゲーション -->
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">研修旅行2025</div>
+
+                <!-- ハンバーガー追加 -->
                 <div class="hamburger" id="hamburger">☰</div>
 
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="index.html#schedule">行程表</a></li>
-                    <li><a href="index.html#checklist">持ち物</a></li>
-                    <li><a href="index.html#notes">注意事項</a></li>
-                    <li><a href="index.html#hotel">宿泊先</a></li>
-                    <li><a href="index.html#links">リンク</a></li>
-                    <li><a href="index.html#sns">SNS</a></li>
-                    <li><a href="index.html#rooms">部屋割</a></li>
-                    <li><a href="index.html#survey">アンケート</a></li>
+                    <li><a href="#schedule">行程表</a></li>
+                    <li><a href="#checklist">持ち物</a></li>
+                    <li><a href="#notes">注意事項</a></li>
+                    <li><a href="#hotel">宿泊先</a></li>
+                    <li><a href="#links">リンク</a></li>
+                    <li><a href="#sns">SNS</a></li>
+                    <li><a href="#rooms">部屋割</a></li>
+                    <li><a href="#survey">アンケート</a></li>
                 </ul>
             </div>
         </nav>
@@ -232,15 +235,15 @@
                 </div>
             </section>-->
 
-            <!-- 戻るリンク -->
-            <div class="section fade-in"
-                style="text-align:center; margin-bottom: 4em;">
-                <a href="index.html" class="submit-btn"><span
-                        class="btn-text">トップへ戻る</span></a>
+                <!-- 戻るリンク -->
+                <div class="section fade-in"
+                    style="text-align:center; margin-bottom: 4em;">
+                    <a href="index.html" class="submit-btn"><span
+                            class="btn-text">トップへ戻る</span></a>
+                </div>
+
             </div>
 
-        </div>
-
-        <script src="script.js"></script>
-    </body>
-</html>
+            <script src="script.js"></script>
+        </body>
+    </html>
