--- a/room.html
+++ b/room.html
@@ -6,7 +6,8 @@
     <title>部屋割表 - 研修旅行 2025</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;500;700&display=swap"
-      rel="stylesheet" />
+      />
+      <link rel="stylesheet" href="style.css"/>
     <style>
     * {
       margin: 0;
