--- a/.github/sns_manual.html
+++ b/.github/sns_manual.html
@@ -22,14 +22,14 @@
                 <div class="hamburger" id="hamburger">☰</div>
 
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="#schedule">行程表</a></li>
-                    <li><a href="#checklist">持ち物</a></li>
-                    <li><a href="#notes">注意事項</a></li>
-                    <li><a href="#hotel">宿泊先</a></li>
-                    <li><a href="#links">リンク</a></li>
-                    <li><a href="#sns">SNS</a></li>
-                    <li><a href="#rooms">部屋割</a></li>
-                    <li><a href="#survey">アンケート</a></li>
+                    <li><a href="index.html#schedule">行程表</a></li>
+                    <li><a href="index.html#checklist">持ち物</a></li>
+                    <li><a href="index.html#notes">注意事項</a></li>
+                    <li><a href="index.html#hotel">宿泊先</a></li>
+                    <li><a href="index.html#links">リンク</a></li>
+                    <li><a href="index.html#sns">SNS</a></li>
+                    <li><a href="index.html#rooms">部屋割</a></li>
+                    <li><a href="index.html#survey">アンケート</a></li>
                 </ul>
             </div>
         </nav>
@@ -151,6 +151,8 @@
                             <li
                                 class="checklist-item">投稿できない・ログインできない場合はSNS運用班へ連絡。</li>
                             <li class="checklist-item">体調不良時も速やかに連絡する。</li>
+                            <li class="checklist-item">ログアウトしてしまったり、ID・パスワードを忘れた場合はSNS運営班に相談。</li>
+
                         </ul>
                     </div>
                 </section>
@@ -213,27 +215,6 @@
                         </div>
                     </div>
                 </section>
-
-                <!-- 付録 -->
-                <!--<section class="section fade-in">
-                    <h2 class="section-title">付録：アカウント情報</h2>
-                    <div class="card">
-                        <div class="auth_data">
-                            <p><strong>ユーザーネーム：</strong>bica_trip_2025</p>
-                            <p><strong>パスワード：</strong>cjdb3136</p>
-                        </div>
-                        <input
-                            type="password"
-                            id="passwordInput"
-                            placeholder="パスワードを入力"
-                            required />
-                        <button onclick="checkPasswordVisibility()"
-                            class="btn-primary">
-                            表示する
-                        </button>
-                    </div>
-                </div>
-            </section>-->
 
                 <!-- 戻るリンク -->
                 <div class="section fade-in"
