--- a/room.html
+++ b/room.html
@@ -161,14 +161,14 @@
         <div class="hamburger" id="hamburger">☰</div>
 
         <ul class="nav-menu" id="navMenu">
-          <li><a href="#schedule">行程表</a></li>
-          <li><a href="#checklist">持ち物</a></li>
-          <li><a href="#notes">注意事項</a></li>
-          <li><a href="#hotel">宿泊先</a></li>
-          <li><a href="#links">リンク</a></li>
-          <li><a href="#sns">SNS</a></li>
-          <li><a href="#rooms">部屋割</a></li>
-          <li><a href="#survey">アンケート</a></li>
+          <li><a href="index.html#schedule">行程表</a></li>
+          <li><a href="index.html#checklist">持ち物</a></li>
+          <li><a href="index.html#notes">注意事項</a></li>
+          <li><a href="index.html#hotel">宿泊先</a></li>
+          <li><a href="index.html#links">リンク</a></li>
+          <li><a href="index.html#sns">SNS</a></li>
+          <li><a href="index.html#rooms">部屋割</a></li>
+          <li><a href="index.html#survey">アンケート</a></li>
         </ul>
       </div>
     </nav>
