--- a/sns_manual.html
+++ b/sns_manual.html
@@ -22,14 +22,14 @@
                 <div class="hamburger" id="hamburger">☰</div>
 
                 <ul class="nav-menu" id="navMenu">
-                    <li><a href="#schedule">行程表</a></li>
-                    <li><a href="#checklist">持ち物</a></li>
-                    <li><a href="#notes">注意事項</a></li>
-                    <li><a href="#hotel">宿泊先</a></li>
-                    <li><a href="#links">リンク</a></li>
-                    <li><a href="#sns">SNS</a></li>
-                    <li><a href="#rooms">部屋割</a></li>
-                    <li><a href="#survey">アンケート</a></li>
+                    <li><a href="index.html#schedule">行程表</a></li>
+                    <li><a href="index.html#checklist">持ち物</a></li>
+                    <li><a href="index.html#notes">注意事項</a></li>
+                    <li><a href="index.html#hotel">宿泊先</a></li>
+                    <li><a href="index.html#links">リンク</a></li>
+                    <li><a href="index.html#sns">SNS</a></li>
+                    <li><a href="index.html#rooms">部屋割</a></li>
+                    <li><a href="index.html#survey">アンケート</a></li>
                 </ul>
             </div>
         </nav>
@@ -93,11 +93,17 @@
                     <div class="accordion-content">
                         <ul class="checklist">
                             <li
-                                class="checklist-item">必須タグ：<strong>#bica2025
-                                    #（チーム名）</strong></li>
-                            <li class="checklist-item">自由投稿でも
-                                <strong>#bica2025</strong> を必ずつける。</li>
+                                class="checklist-item">必須タグ：<strong>
+                                    <ul class="checklist">
+                                        <li>#bica2025</li>
+                                        <li>#（チーム名）</li>
+                                    </ul>
+                                </strong>
+                            </li>
+                            <li class="checklist-item">自由投稿でも<strong>#bica2025</strong>を必ずつける。</li>
+                            <li class="checklist-item"">本文最後に投稿者の名字を書くこと。</li>
                             <li class="checklist-item">ルール内であれば追加タグは自由。</li>
+                            <li class="checklist-item">ストーリーは投稿自由。</li>
                         </ul>
                     </div>
                 </div>
