--- a/sns_manual.html
+++ b/sns_manual.html
@@ -100,7 +100,7 @@
                                     </ul>
                                 </strong>
                             </li>
-                            <li class="checklist-item">自由投稿でも<strong>#bica2025</strong>を必ずつける。</li>
+                            <li id="becareful" class="checklist-item">自由投稿でも<strong>#bica2025</strong>を必ずつける。</li>
                             <li class="checklist-item"">本文最後に投稿者の名字を書くこと。</li>
                             <li class="checklist-item">ルール内であれば追加タグは自由。</li>
                             <li class="checklist-item">ストーリーは投稿自由。</li>
